--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "autoprefixer": "^10.4.20",
     "nuxt": "^3.13.0",
     "postcss": "^8.4.47",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@primevue/nuxt-module": "^4.1.0",
-    "sass-embedded": "^1.79.5"
+    "sass-embedded": "^1.79.5",
+    "tailwindcss": "^3.4.13"
   }
 }
