--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
+    "tailwind-merge": "^2.5.4",
     "vue": "latest",
     "vue-router": "latest",
     "vuedraggable": "^4.1.0"
