--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.5",
     "@primevue/themes": "^4.1.0",
+    "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-text-align": "^2.9.1",
+    "@tiptap/extension-underline": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "@tiptap/vue-3": "^2.9.1",
     "autoprefixer": "^10.4.20",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.4",
