--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@primevue/nuxt-module": "^4.1.0",
+    "@types/sanitize-html": "^2.13.0",
+    "sanitize-html": "^2.13.1",
     "sass-embedded": "^1.79.5",
     "tailwindcss": "^3.4.13"
   }
