--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/starter-kit": "^2.9.1",
     "@tiptap/vue-3": "^2.9.1",
     "autoprefixer": "^10.4.20",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.4",
     "postcss": "^8.4.47",
